# ferrios

./: Cargo.toml  README.md
src/: cpu.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs
src/console/: framebuffer.rs  mod.rs
src/console/framebuffer/: framebuffer_writer.rs  mod.rs
src/libbackend/: init.rs
src/process/: mod.rs  scheduler.rs
src/process/scheduler/: mod.rs
src/scheduler/: context.rs  mod.rs  round_robin.rs
src/syscall/: mod.rs
src/task/: serial_input.rs
src/thread/: kthread.rs  mod.rs  uprocess.rs  uthread.rs
src/thread/uprocess/: uthread.rs
tests/: kernel_threads.rs
